# lightpack

./: README.md
lightpack/: .gitignore  CMakeLists.txt  fast_hsv2rgb.c  fast_hsv2rgb.h  hsv.h  light_ws2812.c  light_ws2812.h  main.c  uart.c  uart.h  ws2812_config.h
lightpack-client/: .gitignore  CMakeLists.txt  hsv.h  main.c  scroll.c  scroll.h  send.c  send.h  spectrum.c  spectrum.h
